--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -9,13 +9,11 @@ def libArtifactId = "compose-wheel-picker"
 def libVersionName = "1.0.0-alpha10"
 
 android {
-    compileSdk 32
+    namespace = "com.sd.lib.compose.wheel_picker"
+    compileSdk 33
     defaultConfig {
         minSdk 21
-        targetSdk 32
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        consumerProguardFiles "consumer-rules.pro"
+        targetSdk 33
     }
 
     buildTypes {
