--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,14 @@
             </intent-filter>
         </activity>
 
+        <activity android:name="com.sd.demo.wheel_picker.SampleDefault" />
+        <activity android:name="com.sd.demo.wheel_picker.SampleCustomFocus" />
+        <activity android:name="com.sd.demo.wheel_picker.SampleCustomDisplay" />
+        <activity android:name="com.sd.demo.wheel_picker.SampleObserveIndex" />
+        <activity android:name="com.sd.demo.wheel_picker.SampleScrollToIndex" />
+        <activity android:name="com.sd.demo.wheel_picker.SampleWaitCount" />
+        <activity android:name="com.sd.demo.wheel_picker.SampleReverseLayout" />
+
     </application>
 
 </manifest>
