--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         </activity>
 
         <activity android:name="com.sd.demo.wheel_picker.SampleDefault" />
+        <activity android:name="com.sd.demo.wheel_picker.SampleLargeUnfocusedCount" />
         <activity android:name="com.sd.demo.wheel_picker.SampleCustomFocus" />
         <activity android:name="com.sd.demo.wheel_picker.SampleCustomDisplay" />
         <activity android:name="com.sd.demo.wheel_picker.SampleObserveIndex" />
